Fixes and Enhancements since Version 0.5 alpha 3

 - The old 'peak.security' implementation has been removed, and replaced with
   a simpler, more flexible implementation based on generic functions (using
   less than half the code and seven fewer interfaces).  Complete documentation
   and API tests for the new implementation can be found in 'rules.txt' in the
   'peak.security' package directory.

   Also, the new implemetation does not require redundant
   'security.allow(security.Anybody)' declarations just because you've declared
   other permissions for a class, so these declarations have been removed from
   ``peak.web``.  They don't do any harm, however, so you can leave them in
   your own code as long as you change them to use 'binding.metadata()' instead
   of the deprecated 'security.allow()'.

 - 'security.allow()' is now DEPRECATED; please use 'binding.metadata()'
   instead.  (There is no change to the calling signature, but
   'binding.metadata' accepts any metadata, not just permissions.)

 - Added 'peak.running.options', a new option-parsing framework that extends
   'optparse' to support the PEAK 'commands' framework.  Command instances
   can now refer to 'self.parsed_args' to find their non-option arguments,
   and to trigger setting of their attributes (or calling of methods) based on
   their raw arguments from 'self.argv'.  See 'options.txt' in the
   'peak.running' package directory for a complete tutorial.
   
 - There is now a 'binding.initAttrs()' function that can be used to initialize
   an object's attributes from e.g. constructor keyword arguments, similar to
   how 'binding.Component' and 'binding.Attribute' constructors work.

 - Security permissions can now be declared as attribute metadata.

   That is, instead of doing declarations like this::

        class Foo:
            bar = binding.Require("Something", permissionNeeded=SomePerm)

        class AnElement(model.Element):
            class someFeature(model.Attribute):